[package]
name = "gleam"
version = "0.1.0"
edition = "2021"
[workspace]
members = ["examples/*"]

[workspace.dependencies]
gleam = { version = "0.1", path = "." }

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
wgpu = "0.17"
winit = "0.28"


[dev-dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
wgpu = "0.17"
winit = "0.28"
pollster = "0.3"
